feat: add relation to members inside BoardEntity and return members of board to controllers